# gamelibs-igcl

./: Makefile  meson.build
include/: igcl_api.h
includes/: igcl_api.h
msvc/: igcl.vcxproj  igcl.vcxproj.filters
src/: cApiWrapper.cpp
